DigicielFull/force-app/main/default/objects/Customer_Application_Forms__c/Customer_Application_Forms__c.object-meta.xml
<CustomObject>
    <label>Customer Application Form</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Application Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>