DigicielFull/force-app/main/default/objects/Customer_Application_Forms__c/fields/Company_Contact__c.field-meta.xml
<CustomField>
    <fullName>Company_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Application Forms</relationshipLabel>
    <relationshipName>Application_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>