DigicielFull/force-app/main/default/objects/Customer_Application_Forms__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Application Forms</relationshipLabel>
    <relationshipName>Customer_Application_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>