DigicielFull/force-app/main/default/objects/Customer_Application_Forms__c/fields/FORMULA_Ban_Number__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Ban_Number__c</fullName>
    <formula>Customer__r.Ban_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ban Number</label>
    <type>Text</type>
</CustomField>