DigicielFull/force-app/main/default/objects/Customer_Application_Forms__c/fields/LASTMODIFIEDBY_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>LASTMODIFIEDBY_MIGRATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LASTMODIFIEDBY_MIGRATION</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Customer Application Forms</relationshipLabel>
    <relationshipName>Customer_Application_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>