DigicielFull/force-app/main/default/objects/Customer_Application_Forms__c/recordTypes/Customer_Payment_From.recordType-meta.xml
<RecordType>
    <fullName>Customer_Payment_From</fullName>
    <active>true</active>
    <label>Customer Payment From</label>
</RecordType>