DigicielFull/force-app/main/default/objects/Customer_Application_Forms__c/recordTypes/Supplemental_Mobile_Service_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Supplemental_Mobile_Service_Agreement</fullName>
    <active>true</active>
    <label>Supplemental Mobile Service Agreement</label>
</RecordType>