DigicielFull/force-app/main/default/objects/Customer_Application_Forms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>FORMULA_Ban_Number__c</columns>
    <columns>Customer__c</columns>
    <columns>Company_Contact__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Date_Signed__c</columns>
    <columns>Received_From__c</columns>
    <columns>Total_CUG__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>