DigicielFull/force-app/main/default/objects/Customer_Application_Forms__c/listViews/Closed_User_Group_CUG_Form.listView-meta.xml
<ListView>
    <fullName>Closed_User_Group_CUG_Form</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>FORMULA_Ban_Number__c</columns>
    <columns>Customer__c</columns>
    <columns>Company_Contact__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Date_Signed__c</columns>
    <columns>Received_From__c</columns>
    <columns>Total_CUG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Customer_Application_Forms__c.Closed_User_Group_CUG_Form</value>
    </filters>
    <label>Closed User Group (CUG) Form</label>
    <language>en_US</language>
</ListView>